--- a/services/paper-query/package.json
+++ b/services/paper-query/package.json
@@ -2,6 +2,11 @@
   "name": "paper-query",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "start": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun run --watch index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
