--- a/services/graph-generator/pyproject.toml
+++ b/services/graph-generator/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 kafka-python-ng = "^2.2.2"
+pika = "^1.3.2"
 
 [build-system]
 requires = ["poetry-core"]
