--- a/services/api/package.json
+++ b/services/api/package.json
@@ -7,6 +7,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/swagger": "^1.0.5",
     "@types/ioredis": "^5.0.0",
     "amqplib": "^0.10.4",
     "elysia": "latest",
