--- a/services/db-worker/pyproject.toml
+++ b/services/db-worker/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "graph-generator"
+name = "db-worker"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -7,9 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-kafka-python-ng = "^2.2.2"
-pika = "^1.3.2"
 redis = "^5.0.4"
+pika = "^1.3.2"
+
 
 [build-system]
 requires = ["poetry-core"]
