--- a/services/paper-query/package.json
+++ b/services/paper-query/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "redis": "^4.6.13"
   }
 }
