--- a/services/graph-generator/pyproject.toml
+++ b/services/graph-generator/pyproject.toml
@@ -9,7 +9,13 @@ readme = "README.md"
 python = "^3.11"
 kafka-python-ng = "^2.2.2"
 pika = "^1.3.2"
-redis = "^5.0.4"
+networkx = "^3.3"
+matplotlib = "^3.8.4"
+numpy = "^1.26.4"
+redisgraph = "^2.4.4"
+findspark = "^2.0.1"
+tqdm = "^4.66.4"
+boto3 = "^1.34.101"
 
 [build-system]
 requires = ["poetry-core"]
