--- a/services/graph-generator/pyproject.toml
+++ b/services/graph-generator/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "3.11.5"
 kafka-python-ng = "^2.2.2"
 pika = "^1.3.2"
 networkx = "^3.3"
